bin_PROGRAMS = 01-setup-context 02-do-query 03-get-data 04-async-query \
               05-libuv-query 06-multi-query

01_setup_context_SOURCE = 01-setup-context.c
02_do_query_SOURCE      = 02-do-query.c
03_get_data_SOURCE      = 03-get-data.c
04_async_query_SOURCE   = 04-async-query.c
05_libuv_query_LDADD    = @UV_LIBS@
05_libuv_query_SOURCE   = 05-libuv-query.c
06_multi_query_LDADD    = @UV_LIBS@
06_multi_query_SOURCE   = 06-multi-query.c
